add slider to projects-page

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -41,7 +41,7 @@
     </header>
       <div class="container">
         <h1 class="title">Мои контакты</h1>
-        <div class="contacts">
+        <div class="block_c_p">
           <div class="contact">
             <a href="https://vk.com/mcredd">
               <img src="img/vk.png">
@@ -74,6 +74,6 @@
       </div>
   </div>
 
-    <script src="js/scripts0.js"></script>
+    <script src="js/scripts0.js.js"></script>
   </body>
 </html>
