--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                     <p>Закончил: с отличием (красный диплом);</p>
                 </div>
             </div>
-            <div class="opit block">
+            <div class="last-experience block">
                 <div class="text resume_text">
                     <h2>Опыт работы</h2>
                     <h3>Специалист по сборке ПК, менеджер по продажам (7 месяцев)</h3>
@@ -88,7 +88,7 @@
                     <li>Поиск покупателей среди юр.лиц, анализ закупки (перечень тваров, ТЗ),
                         <br> формирование коммерческого предложения
                     </li>
-                    <p>Причина ухода: Позвали в другое место </p>
+                    <p>Причина ухода: Позвали в другое место.</p>
 
                     <h3>Авиатехник по приборам и электрооборудованию (1 год, 2 месяца)</h3>
                     <p>Время работы: Декабрь 2020 - н/в.;</p>
@@ -96,8 +96,8 @@
                     <li>Своевременное обслуживание доверенной мне системы самолета</li>
                     <li>Демонтаж/монтаж блоков системы</li>
                     <li>Подготовка самолета к полету</li>
-                    <p>Причина желания уйти: Начал изучать web-разработку и понял, что мне это интересно
-                        <br>хочу развиваться в этой сфере </p>
+                    <p>Причина желания уйти: Начал изучать web-разработку и понял, что мне это интересно.
+                        <br>Хочу развиваться в этой сфере. </p>
                 </div>
             </div>
             <div class="hardware block">
@@ -158,7 +158,7 @@
     </div>
 
 
-<script src="js/scripts0.js"></script>
+<script src="js/scripts0.js.js"></script>
 </body>
 
 </html>
